--- a/TODO.txt
+++ b/TODO.txt
@@ -35,7 +35,7 @@ Game of Life
 +3. CSV delete ""
 4. Menu too small on large screen                               _/
 5. Colorbox
-6. Preview step
+6. Preview step                                                 _/
 7. Slider for speed change in ms                                _/
 
 Wolframm Rule
